<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_activity_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:paddingBottom="10dp"
        android:id="@+id/frame_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="45dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </FrameLayout>

    <com.google.android.material.tabs.TabLayout
        app:tabIndicatorColor="@color/TabIndicatorColor"
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#17B6C8"
        app:layout_constraintBottom_toTopOf="@+id/frame_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:tabSelectedTextColor="@android:color/white"
        app:tabTextColor="@color/tabDefaultColor">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/top_stories_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#17B6C8"
            android:text="Top Stories" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/most_popular_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#17B6C8"
            android:text="Most Popular" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/sports_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#17B6C8"
            android:text="Sports" />
    </com.google.android.material.tabs.TabLayout>


</RelativeLayout>