<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/searchIcon"
        android:title="search"
        android:icon="@drawable/search_icon"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.widget.SearchView" />

    <item
        android:id="@+id/notifications"
        android:title="Notifications"
        app:showAsAction="never">
    </item>

    <item
        android:id="@+id/help"
        android:title="Help"
        app:showAsAction="never">
    </item>

    <item
        android:id="@+id/about"
        android:title="About"
        app:showAsAction="never">
    </item>


</menu>
