<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NotificationsActivity">

    <View
        android:id="@+id/line_under_checkboxes"
        android:layout_width="330dp"
        android:layout_height="1dp"
        android:background="#D8DCDC"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.328" />

    <CheckBox
        android:id="@+id/TravelTextBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Travel"
        android:textSize="14dp"
        android:theme="@style/PrimaryColorTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.65"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.251" />

    <CheckBox
        android:id="@+id/SportsTextBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sports"
        android:textSize="14dp"
        android:theme="@style/PrimaryColorTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.655"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.187" />

    <CheckBox
        android:id="@+id/PoliticsTextBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Politics"
        android:textSize="14dp"
        android:theme="@style/PrimaryColorTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.665"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.125" />

    <CheckBox
        android:id="@+id/EntrepreneursTextBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Entrepreneurs"
        android:textSize="14dp"
        android:theme="@style/PrimaryColorTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.251" />

    <CheckBox
        android:id="@+id/BusinessTextBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Business"
        android:textSize="14dp"
        android:theme="@style/PrimaryColorTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.187" />

    <View
        android:id="@+id/line_under_editText_date"
        android:layout_width="330dp"
        android:layout_height="2dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.078" />

    <EditText
        android:id="@+id/search_query_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:background="@android:color/transparent"
        android:gravity="center_vertical"
        android:hint="Search query term"
        android:textColor="@color/colorAccent"
        android:textColorHint="#C0C1C1"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/ArtsCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Arts"
        android:textSize="14dp"
        android:theme="@style/PrimaryColorTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.125" />

    <Switch
        android:textSize="15dp"
        android:theme="@style/PrimaryColorTheme"
        android:id="@+id/enableNotificationsSwitch"
        android:layout_width="330dp"
        android:layout_height="15dp"
        android:shadowColor="@color/colorPrimary"
        android:text="Enable notifications (once per day)                      "
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line_under_checkboxes"
        app:layout_constraintVertical_bias="0.038" />

</androidx.constraintlayout.widget.ConstraintLayout>