<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity">

    <CheckBox
        android:id="@+id/TravelTextBox"
        android:theme="@style/PrimaryColorTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Travel"
        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.65"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.374" />

    <CheckBox
        android:id="@+id/SportsTextBox"
        android:theme="@style/PrimaryColorTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sports"
        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.655"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.313" />

    <CheckBox
        android:id="@+id/PoliticsTextBox"
        android:theme="@style/PrimaryColorTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Politics"
        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.665"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <CheckBox
        android:id="@+id/EntrepreneursTextBox"
        android:theme="@style/PrimaryColorTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Entrepreneurs"
        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.374" />

    <CheckBox
        android:id="@+id/BusinessTextBox"
        android:theme="@style/PrimaryColorTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Business"
        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.313" />

    <TextView
        android:id="@+id/EndDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="End Date"
        android:textColor="#A4A6A6"
        android:textSize="14dp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.636"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.131" />

    <TextView
        android:id="@+id/Enter_End_Date"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginRight="15dp"
        android:drawableRight="@drawable/drop_down_arrow2"
        android:gravity="center_vertical"
        android:text=""
        android:textColor="#000000"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.94"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.159" />

    <View
        android:id="@+id/line_under_editText_date"
        android:layout_width="330dp"
        android:layout_height="2dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.078" />

    <EditText
        android:background="@android:color/transparent"
        android:gravity="center_vertical"
        android:id="@+id/search_query_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:hint="Search query term"
        android:textColor="@color/colorAccent"
        android:textColorHint="#C0C1C1"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Enter_Begin_Date"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginLeft="15dp"
        android:drawableRight="@drawable/drop_down_arrow2"
        android:gravity="center_vertical"
        android:text=""
        android:textColor="#000000"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.059"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.159" />

    <TextView
        android:id="@+id/BeginDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Begin Date"
        android:textColor="#A4A6A6"
        android:textSize="14dp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13" />

    <View
        android:id="@+id/line_under_begin_date"
        android:layout_width="140dp"
        android:layout_height="1dp"
        android:background="#D5DADA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.206" />

    <View
        android:id="@+id/line_under_end_date"
        android:layout_width="140dp"
        android:layout_height="1dp"
        android:background="#D5DADA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.889"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.205" />

    <CheckBox
        android:id="@+id/ArtsCheckBox"
        android:theme="@style/PrimaryColorTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Arts"
        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/colorPrimary"
        android:text="SEARCH"
        android:textColor="#FAFAFA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.481" />

</androidx.constraintlayout.widget.ConstraintLayout>